# q-ai-drug-new

./: .dockerignore  .env.example  .env.production  .env.staging  .gitignore  CMakeLists.txt  CMakePresets.json  DATA_SOURCES.md  Dockerfile  README.md  THE FINAL PLAN.md  docker-compose.mnl.prod.yml  docker-compose.mnl.yml  docker-compose.yml  drug_discovery_pipeline.ipynb  environment.yml  pyproject.toml  references.bib  requirements.txt  test_all_runners_integration.py  test_new_implementations.py
.github/workflows/: ci.yml  docker-compose-smoke.yml
backend-mnl/: README.md  q-ai-drug-api-summary.txt  q-ai-drug-readme.md
backend-mnl/qudrugforge-backend/: .dockerignore  .env.example  .env.production  .env.test  .gitignore  Dockerfile  Makefile  README.md  requirements.txt  test_fullstack_smoke.py
configs/: cancer_targets.yaml
docs/: COMPLETE_EXECUTION_PLAN.md  COMPLETION_CHECKLIST.md  CRITICAL_BUG_FIXES.md  IMMEDIATE_NEXT_STEPS.md  IMPLEMENTATION_COMPLETE.md  LLM_SCIENTIFIC_HARDENING_PLAYBOOK.md  RAZORPAY_CHECKOUT_READY.md  api_developer_experience.md  dataset_curation_protocol.md  limitations.md  mnl_production_deployment.md  pharma_readiness_gap_analysis.md  product_deployment.md  project_completion_report.md  scientist_modular_saas_blueprint.md
docs/compliance/: change_control_sop.md  data_integrity_policy.md  electronic_records_policy.md  functional_requirements_specification.md  intended_use_statement.md  model_governance_policy.md  risk_assessment.md  test_protocols.md  test_summary_report.md  user_requirements_specification.md  validation_master_plan.md
docs/industrial_readiness/: competitive_landscape.md  customer_onboarding_guide.md  data_governance_whitepaper.md  pilot_plan_for_pharma_lab.md  roi_model.md  scientific_limitations.md  security_whitepaper.md  validation_case_study_EGFR.md  validation_case_study_PARPI.md  validation_case_study_PIK3CA.md
execution_test_dir/: artifacts_registry.json
frontend/: app.js  index.html  investor.css  investor.html  investor.js  styles.css
frontend-mnl/: .dockerignore  .env.e2e  .env.e2e.example  .env.example  .env.production  .eslintrc.json  .gitignore  Dockerfile  README.md  analyze.js  eslint.config.mjs  fix_history.js  fix_imports.js  fix_map.js  fix_mock.js  fix_results.js  next.config.js  package-lock.json  package.json  playwright.config.ts  refactor.js  tailwind.config.ts  tsc_errors.txt  tsconfig.tsbuildinfo
frontend-mnl/docs/: DEMO_MODE_ENFORCEMENT.md  FRONTEND_BUILD_VALIDATION.md  FRONTEND_PROVENANCE_RULES.md  HIDDEN_MOCK_AUDIT.md  PAGE_LEVEL_PROVENANCE_AUDIT.md  PHASE_2B_IMPLEMENTATION_REPORT.md  PHASE_2C_IMPLEMENTATION_REPORT.md  PHASE_2D1_MIGRATION_REPORT.md  PHASE_2D2_MIGRATION_REPORT.md  PHASE_2_ROUTE_MATRIX.md  SCIENTIFIC_UI_STATE_MATRIX.md  UI_ELEMENTS_GUIDE.md  USER_NAVIGATION_FLOW.md  phase17_e2e_testing.md
frontend-mnl/playwright-report/: index.html
frontend-mnl/scripts/: prepare-standalone.mjs  start-standalone.mjs
frontend-mnl/test-results/: .last-run.json
images/: ba573f60-6456-4c5f-b349-de2c472c15df.jfif  f452b134-3d6b-4a18-aedf-455743e63e4e.jfif
md/summaries/: Candidate_10_aldr_summary.txt  Candidate_10_tryb1_summary.txt  Candidate_13_try1_summary.txt  Candidate_15_try1_summary.txt  Candidate_23_aldr_summary.txt  Candidate_23_cah2_summary.txt  Candidate_8_aldr_summary.txt
migrations/: env.py
models/admet/: admet_model_manifest.json
new_models/: drug_discovery_pipeline(Optim).ipynb
phase2_docking/ligands/: all_candidates_3d.sdf  candidate_1.sdf  candidate_18.sdf  candidate_22.sdf  candidate_24.sdf  candidate_6.sdf
phase2_docking/results/: phase2_summary.txt
q-ai-drug-new/: .env.local  .env.staging  CMakeLists.txt  DATA_SOURCES.md  Dockerfile  Drug_Likeliness.ipynb  alembic.ini  best_tox_model.pt  docker-compose.yml  drug_discovery_pipeline(Optim).ipynb  drug_discovery_pipeline.ipynb  drug_discovery_pipeline1.ipynb  environment-qm.yml  examine_artifacts.py  requirements.txt  run_custom_pipeline.py  test_critical_fixes.py  test_debug.py  test_onco_data_builder_standalone.py  test_out.txt
q-ai-drug-new/configs/: oncology_pockets.yaml
q-ai-drug-new/docker/: Dockerfile.worker-base  Dockerfile.worker-scientific
q-ai-drug-new/docs/: BENCHMARK_INTEGRATION_PLAN.md  DEVELOPER_QUICK_REFERENCE.md  IMPLEMENTATION_GAP_ANALYSIS.md  LLM_SCIENTIFIC_HARDENING_PLAYBOOK.md  MODEL_INTEGRATION_REGISTRY.md  POCKET_CURATION_EVIDENCE.md  QAI_ARTIFACT_SCHEMA_CONTRACT.md  SCIENTIFIC_FIRST_EXECUTION_PLAN.md  SCIENTIFIC_SOURCE_REGISTRY.md  SESSION_SUMMARY_MAY15_EVENING.md  SPRINT_COMPLETION_REPORT.md  aws_mongodb_architecture.md  project_completion_report.md  research_architecture.md  scientific_research_protocol.md  sota_review.md  wet_lab_validation_plan.md
q-ai-drug-new/execution_test_dir/: artifacts_registry.json
q-ai-drug-new/frontend/: app.js  index.html  investor.css  styles.css  (+1 more)
qm/: qiskit_psi4_template.py  vqe_results.json
scientific_scratch/: chembl_lookup.json  chembl_mechanisms.json  chembl_target.json  clinical_trials_egfr.json  clinvar_egfr.json  encode_expression.json  hpa_location.json  reactome_egfr.json
scripts/: __init__.py  bootstrap_research_resources.py  curate_legacy_structures.py  setup_wsl_tools.ps1  smoke_external_tools.py
test_dispatch/: artifacts_registry.json
test_onco_run/: dataset_curation_report.html
tests/: test_ai_visual_qa.py  test_artifact_resolver.py  test_auth_mongo.py  test_chemical_db.py  test_docking_science_helpers.py  test_dummy.py  test_industrial_workflow.py  test_interaction_fingerprints.py  test_literature_evidence.py  test_module_console_api.py  test_module_registry.py  test_module_runner_dispatch.py  test_q_dock_runner.py  test_research_api_artifacts.py  test_run_workspace_security.py  test_scientific_curation.py  test_scientific_golden_path.py  test_scientific_oncodata_schema.py  test_scientific_runner_contracts.py  test_tool_payloads.py  test_validation_schema.py  test_vina_parser.py  test_wet_lab_triage.py
updated_dl/: final_candidates_3d.sdf
user-front/: README.md  index.html  package-lock.json  package.json  vite.config.js
(+789 files in other folders)
